--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>My first page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color:powderblue;">
 <h1>This is my first (simple) page</h1>
@@ -11,3 +12,4 @@
 </body>
 
 </html>
+
