--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body style="background-color:powderblue;">
 <h1>This is my first (simple) page</h1>
 <p style="color:red; font-size:40px; font-family:Arial; font-weight:Bold;">This page is only for practice</p>
-<p style="color:brown; font-size:30px; font-family:serif; font-weight:italic;">There will be more content in here.</p>
+<p style="color:brown; font-size:30px; font-family:serif; font-weight:italic;">There will be more content in here.</p><hr>
+  <p>I'm learning from this site <a href="https://www.w3schools.com/html/default.asp">W3Schools</a> mainly.</p>
 
 </body>
 
 </html>
+
 
