--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Bez tego tagu na telefonach strona może być bardzo „ściśnięta”, tekst m
 <title>My first page</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:powderblue;">
+<body>
   <header>
     <h1>This is my first (simple) page</h1>
     <p class="intro">This page is only for practice and learning HTML & CSS.</p>
@@ -23,6 +23,7 @@ Bez tego tagu na telefonach strona może być bardzo „ściśnięta”, tekst m
 </body>
 
 </html>
+
 
 
 
