--- a/index.html
+++ b/index.html
@@ -11,37 +11,6 @@ Bez tego tagu na telefonach strona może być bardzo „ściśnięta”, tekst m
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My first page</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-body {
-background-color:LightGray;
-}
-
-p {
-background-color:rgba(170, 80, 240, 0.3); 
-color:SlateBlue; 
-font-size:40px; 
-font-family:Arial; 
-font-weight:bold; 
-text-align:center; 
-border:10px solid red; 
-margin:10px auto; 
-padding:10px; 
-width:50%;
-}
-
-#para1 {
-background-color:hex(#3bb795); 
-color:hsl(0, 60%, 35%); 
-font-size:30px; 
-font-family:Serif; 
-font-weight:normal; 
-text-align:center; 
-border:20px dotted blue; 
-margin:5px auto; 
-padding:10px; 
-width:50%;
-}
- </style>
 </head>
 <body>
   <header>
@@ -50,13 +19,11 @@ width:50%;
   </header>
   <p>There will be more content in here.</p><hr>
   <p>I'm learning from this site <a href="https://www.w3schools.com/html/default.asp">W3Schools</a> mainly.</p><hr>
-  <p>Today I've practiced some basic inline styling, <br>like font, margin, padding, border, <br>but most of all, COLORS</p>
-
+  <p>Today I've practiced some basic inline styling, <br>like font, margin, padding, border, <br>but most of all, COLORS</p><hr>
 <p id="para1">I've also started learning the basics of CSS.</p>
-
 </body>
-
 </html>
+
 
 
 
